--- a/PyToolkit/插件配置.md
+++ b/PyToolkit/插件配置.md
@@ -65,9 +65,12 @@
 
 ## 脚本配置
 
-> &emsp;&emsp;PyToolkit 通过 C++ 代码在进入引擎界面之后读取 setting.json 里的 script 配置    
-> &emsp;&emsp;读取 快捷键 和 初始化 脚本的位置。    
-> &emsp;&emsp;通过 {Content} 变量指代插件的 Content 文件夹路径，实现相对路径配置。    
+    script - C++ 读取脚本路径
+        initialize - 初始化脚本路径
+        launcher - 配置启动器路径
+
+> &emsp;&emsp;PyToolkit 通过 C++ 代码在进入引擎界面之后读取 setting.json 里的 script 配置       
+> &emsp;&emsp;通过 {Content} 变量指代插件的 Content 文件夹路径，实现相对路径配置。     
 
 ## 菜单配置
 
