更新 PyToolkit 插件配置说明

--- a/PyToolkit/插件配置.md
+++ b/PyToolkit/插件配置.md
@@ -1,69 +1,19 @@
 # 插件配置
 
-> &emsp;&emsp;插件配置通过 Content 目录下的 setting.json 实现    
+> &emsp;&emsp;插件配置通过 Content 目录下的 setting.json 和 menu.json 共同进行配置    
+
+## setting.json 配置
 
 ```json
 {
-    "section":{
-        "Model":"建模",
-        "Anim":"动画",
-        "FX":"特效",
-        "Render":"渲染",
-        "Msic":"杂项",
-        "Help":"帮助"
-    },
-    "menu":{
-        "Model_Tool" : {
-            "section": "Model",
-            "label": "演示:模型处理工具(打印到屏幕)",
-            "type": "PYTHON",
-            "command": "unreal.SystemLibrary.print_string(None,'模型处理工具',text_color=[255,255,255,255])"
-        },
-        "skeletal_socket_tool" : {
-            "section": "Anim",
-            "label": "Socket 自动化添加工具",
-            "type": "COMMAND",
-            "command": "py \"{Content}/Anim/skeletal_socket_tool/skeletal_socket_tool.py\""
-        },
-        "fbx_importer" : {
-            "section": "Anim",
-            "label": "动画导入比较面板",
-            "type": "COMMAND",
-            "command": "py \"{Content}/Anim/FBXImporter/main.py\""
-        },
-        "render_tool" : {
-            "section": "Render",
-            "label": "Sequencer 批量渲染工具",
-            "type": "COMMAND",
-            "command": "py \"{Content}/Anim/sequencer_batch_render/render_tool.py\""
-        },
-        "launcher" : {
-            "section": "Msic",
-            "label": "UE启动器",
-            "type": "COMMAND",
-            "command": "py \"{Content}/Msic/UE_Launcher/launcher.py\""
-        },
-        "renamer" : {
-            "section": "Msic",
-            "label": "批量改名工具",
-            "type": "COMMAND",
-            "command": "py \"{Content}/Msic/Renamer/renamer.py\""
-        },
-        "document" : {
-            "section": "Help",
-            "label": "帮助文档",
-            "type": "PYTHON",
-            "command": "import webbrowser;webbrowser.open_new_tab('http://wiki.l0v0.com/PyToolkit/')"
-        }
-    },
     "script":{
         "initialize": "py \"{Content}/initialize.py\"",
         "launcher":"py \"{Content}/Msic/UE_Launcher/launcher.py\""
     }
 }
+
 ```
 
-## 脚本配置
 
     script - C++ 读取脚本路径
         initialize - 初始化脚本路径
@@ -72,22 +22,157 @@
 > &emsp;&emsp;PyToolkit 通过 C++ 代码在进入引擎界面之后读取 setting.json 里的 script 配置       
 > &emsp;&emsp;通过 {Content} 变量指代插件的 Content 文件夹路径，实现相对路径配置。     
 
-## 菜单配置
 
+## menu.json 配置
 
-    section - 配置分组
+```json
+{
+    "LevelEditor.MainMenu": {
+        "section": {},
+        "property": {
+            "close_self_only": "",
+            "menu_name": "",
+            "menu_owner": "",
+            "menu_parent": "",
+            "menu_type": "",
+            "prevent_customization": "",
+            "searchable": "",
+            "should_close_window_after_menu_selection": "",
+            "style_name": "",
+            "tool_bar_force_small_icons": "",
+            "tool_bar_is_focusable": "",
+            "tutorial_highlight_name": ""
+        },
+        "entry": {},
+        "sub_menu": {
+            "PyToolkit": {
+                "init": {
+                    "name": "PyToolkit",
+                    "label": "PyToolkit",
+                    "section": "PythonTools",
+                    "tooltip": "Python 自动化工具集"
+                },
+                "property": {
+                    "close_self_only": "",
+                    "menu_name": "",
+                    "menu_owner": "",
+                    "menu_parent": "",
+                    "menu_type": "",
+                    "prevent_customization": "",
+                    "searchable": "",
+                    "should_close_window_after_menu_selection": "",
+                    "style_name": "",
+                    "tool_bar_force_small_icons": "",
+                    "tool_bar_is_focusable": "",
+                    "tutorial_highlight_name": ""
+                },
+                "section": {
+                    "Model": {
+                        "label": "建模",
+                        "insert_name": "",
+                        "insert_type": "DEFAULT"
+                    },
+                    "Anim": "动画",
+                    "FX": "特效",
+                    "Render": "渲染",
+                    "Msic": "杂项",
+                    "Help": "帮助"
+                },
+                "entry": {
+                    "model_tool": {
+                        "section": "Model",
+                        "label": "演示:模型处理工具(打印到屏幕)",
+                        "type": "PYTHON",
+                        "command": "unreal.SystemLibrary.print_string(None,'模型处理工具',text_color=[255,255,255,255])"
+                    }
+                }
+            }
+        }
+    },
+    "LevelEditor.LevelEditorToolBar": {
+        "section": {
+            "toolbar_section": {
+                "label": "PyToolkit",
+                "insert_name": "File",
+                "insert_type": "BEFORE"
+            }
+        },
+        "entry": {
+            "Restart": {
+                "property": {
+                    "type": "TOOL_BAR_BUTTON"
+                },
+                "section": "Settings",
+                "label": "Restart",
+                "type": "COMMAND",
+                "command": "py \"{Content}/Msic/restart_engine.py\""
+            }
+        }
+    }
+}
+```
 
-    menu
-        section - 设置分组
-        label - 配置显示名称
-        type - 配置 command 执行的类型 可以填写 python 和 command
-        command - 根据 type 配置执行相应的命令
+    *现有菜单容器的名称
+        section - 设置菜单新的分组
+            *分组名称 - 可以用设置字符串方式设置分组名称 省略插入配置
+                label - 分组显示的名称
+                insert_name - 插入现有元素的名称
+                insert_type - 参考 ToolMenuInsertType 变量  https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenuInsertType.html
 
+        property - 菜单属性配置 参考 ToolMenu 的属性配置说明 https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenu.html
+            close_self_only
+            menu_name
+            menu_owner
+            menu_parent
+            menu_type - 参考 MultiBoxType 变量 https://docs.unrealengine.com/en-US/PythonAPI/class/MultiBoxType.html
+            prevent_customization
+            searchable
+            should_close_window_after_menu_selection
+            style_name
+            tool_bar_force_small_icons
+            tool_bar_is_focusable
+            tutorial_highlight_name
 
-> &emsp;&emsp;菜单配置是通过 initialize.py 实现的。    
-> &emsp;&emsp;menu 下的命名没有限制，只要不重复即可(json 也不允许记录重复的键值对)    
-> &emsp;&emsp;COMMAND 是 unreal 的命令行， py 命令可以执行 python 脚本。    
-> &emsp;&emsp;PYTHON 类型则是直接 Python 代码，一般配置较为简单的代码，避免脚本过多~    
+        entry - 菜单项配置
+            *菜单名称
+                property - 菜单项属性行配置 参考 ToolMenuEntry 的属性配置说明 https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenuEntry.html
+                    insert_position - 参考 ToolMenuInsert 变量 https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenuInsert.html
+                        name
+                        position - 参考 ToolMenuInsertType 变量  https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenuInsertType.html
+                    name
+                    owner - 暂不支持配置
+                    script_object - 暂不支持配置
+                    should_close_window_after_menu_selection
+                    tutorial_highlight_name
+                    type - 配置 Toolbar 或者 menu 类型 | 参考 MultiBoxType 变量 https://docs.unrealengine.com/en-US/PythonAPI/class/MultiBoxType.html
+                    user_interface_action_type 参考 UserInterfaceActionType 变量 https://docs.unrealengine.com/en-US/PythonAPI/class/UserInterfaceActionType.html
+                section - 配置菜单项所属的分组
+                label - 配置菜单项显示的名称
+                type - 命令执行的类型 参考 ToolMenuStringCommandType 变量 https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenuStringCommandType.html
+                command - 命令执行的代码 支持 {Content} 相对路径变量
+
+        sub_menu - 副菜单就是上面配置的套娃递归 | 多提供了 init 配置选项设置初始化
+            *菜单容器的名称
+                init
+                    name - 菜单名称
+                    label - 显示的名称
+                    section - 所属分组
+                    tooltip - 提示文字
+                section
+                property
+                entry
+                sub_menu
+
+[ToolMenu](https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenu.html)    
+[ToolMenuEntry](https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenuEntry.html)    
+[ToolMenuInsert](https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenuInsert.html)    
+[MultiBoxType](https://docs.unrealengine.com/en-US/PythonAPI/class/MultiBoxType.html)    
+[ToolMenuInsertType](https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenuInsertType.html)    
+[UserInterfaceActionType](https://docs.unrealengine.com/en-US/PythonAPI/class/UserInterfaceActionType.html)    
+[ToolMenuStringCommandType](https://docs.unrealengine.com/en-US/PythonAPI/class/ToolMenuStringCommandType.html)    
+
+> &emsp;&emsp;上面就是 菜单 键值配置的说明，*号开头的键值说明是可以任意名称或者比如菜单容器可以通过 UE_Util 库中的 list_menu 函数获取对应的名称     
+> &emsp;&emsp;因为使用了递归方式进行菜单配置，可能看上面的说明会比较混乱，建议参照已经配置好 menu.json 对照观察，或者查看 initialize.py 源码查看 Python 解析的过程。   
 
 ## initialize 脚本
 
